force-app/main/default/objects/Approval_Assignment__c/Approval_Assignment__c.object-meta.xml
<CustomObject>
    <label>Approval Assignment</label>
    <nameField>
        <label>Approval Assignments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>