force-app/main/default/objects/Approval_Assignment__c/fields/Alert_Only__c.field-meta.xml
<CustomField>
    <fullName>Alert_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>populated via Create Approval Assignments flow</description>
    <label>Alert Only</label>
    <type>Checkbox</type>
</CustomField>