force-app/main/default/objects/Approval_Assignment__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <formula>IF( TEXT( Status__c ) = &quot;Approved&quot;, TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>