force-app/main/default/objects/Approval_Assignment__c/fields/Document_Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document Checklist Item</label>
    <referenceTo>DocumentChecklistItem</referenceTo>
    <relationshipLabel>Approval Assignments</relationshipLabel>
    <relationshipName>Approval_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>