force-app/main/default/objects/Approval_Assignment__c/fields/Document_Edits_Comments__c.field-meta.xml
<CustomField>
    <fullName>Document_Edits_Comments__c</fullName>
    <label>Document Edits / Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>