force-app/main/default/objects/Approval_Assignment__c/fields/Owner_ID_frm__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID_frm__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>