force-app/main/default/objects/Approval_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approve with Changes</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Alert Only</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
                <isActive>false</isActive>
                <label>Approve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>