force-app/main/default/objects/Approval_Assignment__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>CASE(  Status__c , 
&quot;New&quot;, IMAGE(&quot;/resource/1712610540000/YellowButtonPNG?&quot;, &quot;New&quot;,30,30),
&quot;Pending&quot;,IMAGE(&quot;/resource/1712610540000/YellowButtonPNG?&quot;, &quot;Pending&quot;,30,30),
&quot;Approve with Changes&quot;, IMAGE(&quot;/resource/1712610585000/BlueButtonPNG?&quot;, &quot;Approve with Changes&quot;,30,30),
&quot;Approved&quot;, IMAGE(&quot;/resource/1712610566000/GreenButtonPNG?&quot;, &quot;Approved&quot;,30,30),
&quot;Rejected&quot;, IMAGE(&quot;/resource/1712610507000/RedButtonPNG?&quot;, &quot;Rejected&quot;,30,30),
IMAGE(&quot;/resource/1712610540000/YellowButtonPNG?&quot;, &quot;Alert Only&quot;,30,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>