force-app/main/default/objects/Approval_Assignment__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>populated via Submit Approval Assignments flow</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>