force-app/main/default/objects/Approval_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Checklist_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>