force-app/main/default/objects/Approval_Assignment__c/listViews/Approval_Assignment_Queue_Approval_Assignment.listView-meta.xml
<ListView>
    <fullName>Approval_Assignment_Queue_Approval_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Approval Assignment Queue</label>
    <queue>Approval_Assignment_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>