force-app/main/default/objects/Approval_Assignment__c/listViews/ARPA_Grants_Manager_Approval_Assignment.listView-meta.xml
<ListView>
    <fullName>ARPA_Grants_Manager_Approval_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA ARPA Grants Manager Queue</label>
    <queue>ARPA_Grants_Manager_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>