force-app/main/default/objects/Approval_Assignment__c/listViews/Attorney_Queue_Approval_Assignment.listView-meta.xml
<ListView>
    <fullName>Attorney_Queue_Approval_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Attorney Queue</label>
    <queue>Attorney_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>