force-app/main/default/objects/Approval_Assignment__c/listViews/Coastal_Queue_Approval_Assignment.listView-meta.xml
<ListView>
    <fullName>Coastal_Queue_Approval_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>Coastal Queue</label>
    <queue>Coastal_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>